@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>460</width>
-    <height>571</height>
+    <height>459</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" >
@@ -36,60 +36,24 @@
       </attribute>
       <layout class="QVBoxLayout" >
        <item>
-        <widget class="QGroupBox" name="groupBox" >
-         <property name="title" >
-          <string>Paths</string>
-         </property>
-         <layout class="QVBoxLayout" >
-          <property name="spacing" >
-           <number>6</number>
-          </property>
-          <property name="leftMargin" >
-           <number>9</number>
-          </property>
-          <property name="topMargin" >
-           <number>9</number>
-          </property>
-          <property name="rightMargin" >
-           <number>9</number>
-          </property>
-          <property name="bottomMargin" >
-           <number>9</number>
-          </property>
-          <item>
-           <widget class="QLabel" name="textLabel1_2" >
-            <property name="text" >
-             <string>Select the &amp;MPlayer executable:</string>
-            </property>
-            <property name="wordWrap" >
-             <bool>false</bool>
-            </property>
-            <property name="buddy" >
-             <cstring>mplayerbin_edit</cstring>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="FileChooser" name="mplayerbin_edit" />
-          </item>
-          <item>
-           <widget class="QLabel" name="textLabel1_6" >
-            <property name="text" >
-             <string>&amp;Folder for storing screenshots:</string>
-            </property>
-            <property name="wordWrap" >
-             <bool>false</bool>
-            </property>
-            <property name="buddy" >
-             <cstring>screenshot_edit</cstring>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="FileChooser" name="screenshot_edit" />
-          </item>
-         </layout>
-        </widget>
+        <layout class="QHBoxLayout" >
+         <item>
+          <widget class="QLabel" name="textLabel1_2" >
+           <property name="text" >
+            <string>&amp;MPlayer executable:</string>
+           </property>
+           <property name="wordWrap" >
+            <bool>false</bool>
+           </property>
+           <property name="buddy" >
+            <cstring>mplayerbin_edit</cstring>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="FileChooser" name="mplayerbin_edit" />
+         </item>
+        </layout>
        </item>
        <item>
         <widget class="QGroupBox" name="groupBox_3" >
@@ -181,6 +145,45 @@
         </widget>
        </item>
        <item>
+        <widget class="QGroupBox" name="groupBox_2" >
+         <property name="title" >
+          <string>Screenshots</string>
+         </property>
+         <layout class="QGridLayout" >
+          <item row="0" column="0" colspan="2" >
+           <widget class="QCheckBox" name="use_screenshots_check" >
+            <property name="text" >
+             <string>&amp;Enable screenshots</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0" >
+           <widget class="QLabel" name="screenshots_dir_label" >
+            <property name="enabled" >
+             <bool>false</bool>
+            </property>
+            <property name="text" >
+             <string>&amp;Folder:</string>
+            </property>
+            <property name="wordWrap" >
+             <bool>false</bool>
+            </property>
+            <property name="buddy" >
+             <cstring>screenshot_edit</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1" >
+           <widget class="FileChooser" name="screenshot_edit" >
+            <property name="enabled" >
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
         <widget class="QCheckBox" name="close_on_finish_check" >
          <property name="text" >
           <string>&amp;Close when finished playback</string>
@@ -205,7 +208,7 @@
          <property name="sizeHint" >
           <size>
            <width>438</width>
-           <height>51</height>
+           <height>31</height>
           </size>
          </property>
         </spacer>
@@ -1246,10 +1249,11 @@ For translators: don't translate this text, it will be replaced with another one
  <tabstops>
   <tabstop>general_tab</tabstop>
   <tabstop>mplayerbin_edit</tabstop>
-  <tabstop>screenshot_edit</tabstop>
   <tabstop>remember_all_check</tabstop>
   <tabstop>remember_time_check</tabstop>
   <tabstop>filesettings_method_combo</tabstop>
+  <tabstop>use_screenshots_check</tabstop>
+  <tabstop>screenshot_edit</tabstop>
   <tabstop>close_on_finish_check</tabstop>
   <tabstop>pause_if_hidden_check</tabstop>
   <tabstop>vo_combo</tabstop>
@@ -1457,6 +1461,38 @@ For translators: don't translate this text, it will be replaced with another one
     <hint type="destinationlabel" >
      <x>181</x>
      <y>298</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>use_screenshots_check</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>screenshots_dir_label</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>229</x>
+     <y>256</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>43</x>
+     <y>288</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>use_screenshots_check</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>screenshot_edit</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>229</x>
+     <y>256</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>254</x>
+     <y>288</y>
     </hint>
    </hints>
   </connection>
